--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -68,7 +68,8 @@
                                     </div>
                                 </div>
                                 <div class="mean-last">
-                                    <a class="navbar-brand" asp-area="" asp-controller="" asp-action="Login">Login/Sign Up</a>
+                                    @*<a class="navbar-brand" asp-area="" asp-controller="" asp-action="Login">Login/Sign Up</a>*@
+                                    <partial class="navbar-brand" name="_LoginPartial"/>
                                 </div>
                             </div>
                         </div>
