--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -154,6 +154,7 @@
                 </div>
                 
             </footer>
+    @await RenderSectionAsync("Scripts", required: false)
             <!-- end footer -->
             <!-- Javascript files-->
             <script src="js/jquery.min.js"></script>
