--- a/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApplication1/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,12 +22,22 @@
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
+
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <div class="form-check">
+                <input asp-for="Input.Role" class="form-check-input" type="radio" id="roleAdmin" value="Student">
+                <label class="form-check-label" for="roleAdmin">Student</label>
+            </div>
+            <div class="form-check">
+                <input asp-for="Input.Role" class="form-check-input" type="radio" id="roleManager" value="Teacher">
+                <label class="form-check-label" for="roleManager">Teacher</label>
+            </div>
+
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Regi ster</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
