--- a/WebApplication1/Views/Courses/Create.cshtml
+++ b/WebApplication1/Views/Courses/Create.cshtml
@@ -17,7 +17,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-controller="Courses">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -29,10 +29,10 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="InstructorId" class="control-label"></label>
                 <select asp-for="InstructorId" class ="form-control" asp-items="ViewBag.InstructorId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
                 <input asp-for="Category" class="form-control" />
