--- a/WebApplication1/Views/Users/Edit.cshtml
+++ b/WebApplication1/Views/Users/Edit.cshtml
@@ -17,9 +17,15 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-controller="Users">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<input type="hidden" asp-for="Id" />*@
             <input type="hidden" asp-for="UserId" />
+            <input type="hidden" value="@Model.Id" />
+
+            <label>
+                @Model.Id
+            </label>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
