--- a/WebApplication1/Views/Courses/Create.cshtml
+++ b/WebApplication1/Views/Courses/Create.cshtml
@@ -31,7 +31,7 @@
             </div>
             @*<div class="form-group">
                 <label asp-for="InstructorId" class="control-label"></label>
-                <select asp-for="InstructorId" class ="form-control" asp-items="ViewBag.InstructorId"></select>
+                <input asp-for="InstructorId" class ="form-control" type="hidden"/>
             </div>*@
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
