--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,85 +10,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- body -->
+
 <body class="main-layout">
-            <section class="slider_section">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
 
-                            <div class="container-fluid padding_dd">
-                                <div class="carousel-caption">
-                                    <div class="row">
-                                        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                            <div class="text-bg">
-                                                <h1>Search your Favorite Course here</h1>
-                                                <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
-                                                <a href="#">Read more</a> <a href="#">get a qoute</a>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                            <div class="images_box">
-                                                <figure><img src="images/img2.png"></figure>
-                                            </div>
-                                        </div>
+
+    <section class="slider_section">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+
+                    <div class="container-fluid padding_dd">
+                        <div class="carousel-caption">
+                            <div class="row">
+                                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                    <div class="text-bg">
+                                        <h1>Search your Favorite Course here</h1>
+                                        <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
+                                        <a href="#">Read more</a> <a href="#">get a qoute</a>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-
-                            <div class="container-fluid padding_dd">
-                                <div class="carousel-caption">
-
-                                    <div class="row">
-                                        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                            <div class="text-bg">
-                                                <h1>Search your Favorite Course here</h1>
-                                                <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
-                                                <a href="#">Read more</a><a href="#">get a qoute</a>
-                                            </div>
-                                        </div>
-
-                                        <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                            <div class="images_box">
-                                                <figure><img src="images/img2.png"></figure>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-
-                        <div class="carousel-item">
-
-                            <div class="container-fluid padding_dd">
-                                <div class="carousel-caption ">
-                                    <div class="row">
-                                        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-                                            <div class="text-bg">
-                                                <h1>Search your Favorite Course here</h1>
-                                                <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
-                                                <a href="#">Read more</a> <a href="#">get a qoute</a>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
-                                            <div class="images_box">
-                                                <figure><img src="images/img2.png"></figure>
-                                            </div>
-                                        </div>
+                                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                    <div class="images_box">
+                                        <figure><img src="images/img2.png"></figure>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="carousel-item">
+
+                    <div class="container-fluid padding_dd">
+                        <div class="carousel-caption">
+
+                            <div class="row">
+                                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                    <div class="text-bg">
+                                        <h1>Search your Favorite Course here</h1>
+                                        <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
+                                        <a href="#">Read more</a><a href="#">get a qoute</a>
+                                    </div>
+                                </div>
+
+                                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                    <div class="images_box">
+                                        <figure><img src="images/img2.png"></figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="carousel-item">
+
+                    <div class="container-fluid padding_dd">
+                        <div class="carousel-caption ">
+                            <div class="row">
+                                <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
+                                    <div class="text-bg">
+                                        <h1>Search your Favorite Course here</h1>
+                                        <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
+                                        <a href="#">Read more</a> <a href="#">get a qoute</a>
+                                    </div>
+                                </div>
+                                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
+                                    <div class="images_box">
+                                        <figure><img src="images/img2.png"></figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -98,9 +101,18 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        </div>
 
-        </section>
+    </section>
+    <div class="search-box">
+        <form class="form-inline" asp-controller="Courses" asp-action="Index" method="get">
+            <div class="input-group">
+                <input type="text" class="form-control" name="searchTitle" placeholder="Search by Title">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
     <!-- about  -->
     <div id="about" class="about">
         <div class="container">
