--- a/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -4,14 +4,16 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
+<div class="container">
 
-<ul class="navbar-nav">
+
+<ul class="navbar-nav row">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
+        <li class="nav-item col-sm-3">
             <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item col-sm-3">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button id="logout" type="submit" class="nav-link btn btn-link ">Logout</button>
             </form>
@@ -27,3 +29,4 @@
         </li>
     }
 </ul>
+</div>
