--- a/WebApplication1/Views/Courses/Create.cshtml
+++ b/WebApplication1/Views/Courses/Create.cshtml
@@ -7,7 +7,7 @@
 
 <body>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 mt-5">
             <form asp-action="Create" asp-controller="Courses">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
