--- a/WebApplication1/Views/Courses/Edit.cshtml
+++ b/WebApplication1/Views/Courses/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication1.Models.Course
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -14,9 +14,12 @@
 <body>
 
 <h4>Course</h4>
-<hr />
+<hr />   
 <div class="row">
+        
     <div class="col-md-4">
+            
+            
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CourseId" />
@@ -31,8 +34,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InstructorId" class="control-label"></label>
-                <select asp-for="InstructorId" class="form-control" asp-items="ViewBag.InstructorId"></select>
+                <input type="hidden" asp-for="InstructorId" />
                 <span asp-validation-for="InstructorId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -55,8 +57,17 @@
             </div>
         </form>
     </div>
-</div>
+        <form asp-action="Create" asp-controller="CourseContents">
+            <div class="col-md-4">
+                <input asp-for="CourseId" value ="@Model.CourseId"/>
+                <button type="submit">Add Content</button>
+            </div>
 
+        </form>
+        
+        
+</div>
+    
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
