--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -24,15 +24,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- fevicon -->
-    <link rel="icon" href="images/fevicon.png" type="image/gif" />
+    <link rel="icon" href="~/images/fevicon.png" type="image/gif" />
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <!-- style css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="~/css/style.css">
     <!-- Responsive-->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="~/css/responsive.css">
     <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+    <link rel="stylesheet" href="~/css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -43,7 +43,7 @@
 <body>
     <!-- loader  -->
     <div class="loader_bg">
-        <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+        <div class="loader"><img src="~/images/loading.gif" alt="#" /></div>
     </div>
     <!-- end loader -->
     <!-- header -->
@@ -57,7 +57,7 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="Home/Index"><img src="images/logo.png" alt="#" /></a>
+                                        <a href="/"><img src="~/images/logo.png" alt="#" /></a>
                                     </div>
                                 </div>
                             </div>
@@ -71,6 +71,7 @@
                                                 <li class="active"> <a href="/">Home</a> </li>
                                                 @if (SignInManager.IsSignedIn(User))
                                                 {
+                                      
                                                     <li> <a href="/courses/mycourses">My Courses </a> </li>
                                                 }
                                               
@@ -95,6 +96,7 @@
                 </div>
             </form>*@
                                         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                            <div class="navbar-brand text-white">Welcome @UserManager.GetUserName(User)</div>
                                             <button id="logout" type="submit" class="nav-link btn btn-link ">Logout</button>
                                         </form>
                                     }
@@ -124,21 +126,21 @@
                                             <h3>Contact us </h3>
                                             <ul class="loca">
                                                 <li>
-                                                    <a href="#"><img src="icon/loc.png" alt="#" /></a>London 145
+                                            <a href="#"><img src="~/icon/loc.png" alt="#" /></a>London 145
                                                     <br>United Kingdom
                                                 </li>
                                                 <li>
-                                                    <a href="#"><img src="icon/email.png" alt="#" /></a>demo@gmail.com
+                                            <a href="#"><img src="~/icon/email.png" alt="#" /></a>demo@gmail.com
                                                 </li>
                                                 <li>
-                                                    <a href="#"><img src="icon/call.png" alt="#" /></a>+12586954775
+                                            <a href="#"><img src="~/icon/call.png" alt="#" /></a>+12586954775
                                                 </li>
                                             </ul>
                                             <ul class="social_link">
-                                                <li><a href="#"><img src="icon/fb.png"></a></li>
-                                                <li><a href="#"><img src="icon/tw.png"></a></li>
-                                                <li><a href="#"><img src="icon/lin(2).png"></a></li>
-                                                <li><a href="#"><img src="icon/instagram.png"></a></li>
+                                        <li><a href="#"><img src="~/icon/fb.png"></a></li>
+                                        <li><a href="#"><img src="~/icon/tw.png"></a></li>
+                                        <li><a href="#"><img src="~/icon/lin(2).png"></a></li>
+                                        <li><a href="#"><img src="~/icon/instagram.png"></a></li>
                                             </ul>
 
                                         </div>
@@ -170,7 +172,7 @@
 
                                     <div class="col-lg-3 col-md-6 col-sm-6 ">
                                         <div class="address">
-                                            <a href="Home/Index"> <img src="images/logo1.jpg" alt="logo"></a>
+                                    <a href="Home/Index"> <img src="~/images/logo1.jpg" alt="logo"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -185,14 +187,14 @@
     @await RenderSectionAsync("Scripts", required: false)
             <!-- end footer -->
             <!-- Javascript files-->
-            <script src="js/jquery.min.js"></script>
-            <script src="js/popper.min.js"></script>
-            <script src="js/bootstrap.bundle.min.js"></script>
-            <script src="js/jquery-3.0.0.min.js"></script>
-            <script src="js/plugin.js"></script>
+    <script src="~/js/jquery.min.js"></script>
+    <script src="~/js/popper.min.js"></script>
+    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/jquery-3.0.0.min.js"></script>
+    <script src="~/js/plugin.js"></script>
             <!-- sidebar -->
-            <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-            <script src="js/custom.js"></script>
-            <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <script src="~/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="~/js/custom.js"></script>
+    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 </body>
 </html>
