Redesign edit course page

--- a/WebApplication1/Views/Courses/Edit.cshtml
+++ b/WebApplication1/Views/Courses/Edit.cshtml
@@ -18,8 +18,8 @@
 <div class="row">
         
     <div class="col-md-4">
-            
-            
+
+
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CourseId" />
@@ -52,24 +52,30 @@
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="row justify-content-between">
+                <div class="col-md-4">
+                    <a class="btn btn-success" href="@Url.Action("Create", "CourseContents", new { CourseId = Model.CourseId })">Add Content</a>
+                    @*<form asp-action="Create" asp-controller="CourseContents">
+                <input asp-for="CourseId" type="hidden" value="@Model.CourseId" />
+                <button class="btn btn-success" type="submit">Add Content</button>
+            </form>*@
+                </div>
+                <div class="form-group col-md-4">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
             </div>
         </form>
+      
     </div>
-        <form asp-action="Create" asp-controller="CourseContents">
-            <div class="col-md-4">
-                <input asp-for="CourseId" value ="@Model.CourseId"/>
-                <button type="submit">Add Content</button>
-            </div>
-
-        </form>
+       
         
         
 </div>
     
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">
+        <i class="fa fa-arrow-left"></i> Back to List
+    </a>
 </div>
 
 @section Scripts {
